# myr-client

./: .travis.yml  README.rst  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
myr/client/: __init__.py  fnutils.py
tests/: _fn3.py  test_client.py  test_fnutils.py
