[metadata]
name = myr.client
author = Vnet a.s.
author-email = sap@vnet.sk
summary = Client for myr-stack.
description-file = README.rst
home-page = https://github.com/Vnet-as/myr-client
license = MIT
classifier =
    Development Status :: 2 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
keywords =
    rpc
    amqp
    discovery
    announce
[files]
packages =
    myr
    myr.client
namespace_packages =
    myr
